# docs/v1/swagger.json
@@ -1,21 +1,18 @@
-// Package docs Code generated by swaggo/swag. DO NOT EDIT
-package docs
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "schemes": {{ marshal .Schemes }},
+{
+    "schemes": [
+        "http"
+    ],
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "description": "Esta API é projetada para monitoramento de dívidas, ajudando a organizar financeiramente.",
+        "title": "API GO",
         "contact": {},
-        "version": "{{.Version}}"
+        "version": "1.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
+    "host": "localhost:8080",
+    "basePath": "/api/v1",
     "paths": {
-        "/api/debts": {
+        "/debts": {
             "get": {
                 "description": "Retorna uma lista de débitos com paginação e filtros opcionais",
                 "consumes": [
@@ -165,7 +162,7 @@ const docTemplate = `{
                 }
             }
         },
-        "/api/debts/{id}": {
+        "/debts/{id}": {
             "get": {
                 "description": "Retorna um débito pelo ID fornecido na URL",
                 "consumes": [
@@ -317,7 +314,7 @@ const docTemplate = `{
                 }
             }
         },
-        "/api/invoices": {
+        "/invoices": {
             "get": {
                 "description": "Retorna uma lista de faturas com filtros opcionais",
                 "consumes": [
@@ -455,7 +452,7 @@ const docTemplate = `{
                 }
             }
         },
-        "/api/invoices/{id}": {
+        "/invoices/{id}": {
             "get": {
                 "description": "Retorna uma fatura pelo ID fornecido na URL",
                 "consumes": [
@@ -637,11 +634,11 @@ const docTemplate = `{
                     "type": "number"
                 },
                 "category": {
-                    "description": "Nome da categoria do débito",
+                    "description": "Nome da categoria",
                     "type": "string"
                 },
                 "category_id": {
-                    "description": "ID da categoria do débito",
+                    "description": "ID da categoria",
                     "type": "string"
                 },
                 "created_at": {
@@ -665,11 +662,11 @@ const docTemplate = `{
                     "type": "string"
                 },
                 "status": {
-                    "description": "Nome do status do débito",
+                    "description": "Nome do status",
                     "type": "string"
                 },
                 "status_id": {
-                    "description": "ID do status do débito",
+                    "description": "ID do status",
                     "type": "string"
                 },
                 "title": {
@@ -714,30 +711,39 @@ const docTemplate = `{
             "type": "object",
             "properties": {
                 "amount": {
+                    "description": "Valor da fatura",
                     "type": "number"
                 },
                 "created_at": {
+                    "description": "Data de criação da fatura",
                     "type": "string"
                 },
                 "due_date": {
+                    "description": "Data de vencimento no formato YYYY-MM-DD",
                     "type": "string"
                 },
                 "id": {
+                    "description": "ID único da fatura",
                     "type": "string"
                 },
                 "issue_date": {
+                    "description": "Data de emissão no formato YYYY-MM-DD",
                     "type": "string"
                 },
                 "status": {
+                    "description": "Nome do status",
                     "type": "string"
                 },
                 "status_id": {
+                    "description": "ID do status",
                     "type": "string"
                 },
                 "title": {
+                    "description": "Título da fatura",
                     "type": "string"
                 },
                 "updated_at": {
+                    "description": "Data da última atualização da fatura",
                     "type": "string"
                 }
             }
@@ -807,22 +813,4 @@ const docTemplate = `{
             }
         }
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "1.0",
-	Host:             "localhost:8080",
-	BasePath:         "/",
-	Schemes:          []string{"http"},
-	Title:            "API GO",
-	Description:      "Esta é a documentação da API",
-	InfoInstanceName: "swagger",
-	SwaggerTemplate:  docTemplate,
-	LeftDelim:        "{{",
-	RightDelim:       "}}",
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
